[package]
name = "gauthz"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]

[dev_dependencies]
hyper-tls = "0.1"
tokio-core = "*"

[dependencies]
tokio-service = "*"
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
medallion="2.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.1"