[package]
name = "gauthz"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Google API authentication crate"
documentation = "https://softprops.github.io/gauthz"
homepage = "https://github.com/softprops/gauthz"
repository = "https://github.com/softprops/gauthz"
keywords = ["gcp", "oauth2", "google", "api"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/gauthz" }
coveralls = { repository = "softprops/gauthz" }

[dependencies]
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
medallion="2.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.1"
tokio-core = "0.1"

[dependencies.hyper-tls]
optional = true
version = "0.1.2"

[features]
default = ["tls"]
tls = ["hyper-tls"]